@@ -1,57 +1,57 @@
 import java.net.URI;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
-public class URIDecoder {
+public class URIPathDecoder {
+
+    public static class PathSegmentImpl {
+        private String path;
+        
+        public PathSegmentImpl(String path) {
+            this.path = path;
+        }
+        
+        public String getPath() {
+            return path;
+        }
+    }
 
     public static List<PathSegmentImpl> decodePath(URI u, boolean decode) {
-        List<PathSegmentImpl> pathSegments = new ArrayList<>();
-        String path = u.getPath();
-
-        if (path == null || path.isEmpty()) {
-            return pathSegments;
+        List<PathSegmentImpl> segments = new ArrayList<>();
+        
+        if (u == null || u.getPath() == null) {
+            return segments;
         }
 
-        // Remove leading '/' if the path is absolute
+        String path = u.getPath();
+        
+        // Remove leading slash for absolute paths
         if (path.startsWith("/")) {
             path = path.substring(1);
         }
-
-        String[] segments = path.split("/");
-        for (String segment : segments) {
+        
+        // Handle empty path
+        if (path.isEmpty()) {
+            return segments;
+        }
+        
+        // Split path into segments
+        String[] rawSegments = path.split("/");
+        
+        for (String segment : rawSegments) {
             if (decode) {
-                segment = java.net.URLDecoder.decode(segment, java.nio.charset.StandardCharsets.UTF_8);
+                try {
+                    // Decode segment using UTF-8 encoding
+                    segment = URLDecoder.decode(segment, StandardCharsets.UTF_8.name());
+                } catch (Exception e) {
+                    // Keep original segment if decoding fails
+                }
             }
-            pathSegments.add(new PathSegmentImpl(segment));
+            segments.add(new PathSegmentImpl(segment));
         }
-
-        return pathSegments;
-    }
-
-    // Assuming PathSegmentImpl is a class that represents a path segment
-    public static class PathSegmentImpl {
-        private String segment;
-
-        public PathSegmentImpl(String segment) {
-            this.segment = segment;
-        }
-
-        public String getSegment() {
-            return segment;
-        }
-
-        @Override
-        public String toString() {
-            return segment;
-        }
-    }
-
-    public static void main(String[] args) {
-        // Example usage
-        URI uri = URI.create("http://example.com/path/to/resource");
-        List<PathSegmentImpl> segments = decodePath(uri, true);
-        for (PathSegmentImpl segment : segments) {
-            System.out.println(segment);
-        }
+        
+        return segments;
     }
 }
